kubectl-release-manager/03-backend-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apollo-backend
  namespace: apollo
  labels:
    app.kubernetes.io/name: apollo-backend
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: apollo-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: apollo-backend
    spec:
      securityContext:
        {}
      containers:
        - name: apollo-backend
          securityContext:
            {}
          image: "novarasa/app-showcase-backend-java:latest"
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 9090
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: apollo-backend
  namespace: apollo
  labels:
    app.kubernetes.io/name: apollo-backend
    app.kubernetes.io/managed-by: kubectl
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: apollo-backend
